@@ -49,7 +49,7 @@
 define('PKG_NAME','GroupEletters');
 define('PKG_NAME_LOWER','groupeletters');
 define('PKG_VERSION','1.0.0');
-define('PKG_RELEASE','beta5');
+define('PKG_RELEASE','rc');
 define('PKG_CATEGORY','GroupEletters');
 
 /* Set package options - you can turn these on one-by-one
